grammar/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> print_instr newline
Rule 5     instruccion -> println_instr newline
Rule 6     instruccion -> definicion_instr newline
Rule 7     instruccion -> asignacion_instr newline
Rule 8     instruccion -> asignacion_arreglo_instr newline
Rule 9     instruccion -> definicion_asignacion_instr newline
Rule 10    instruccion -> call_function newline
Rule 11    instruccion -> declare_function newline
Rule 12    instruccion -> return_state newline
Rule 13    instruccion -> break_state newline
Rule 14    instruccion -> continue_state newline
Rule 15    instruccion -> if_state newline
Rule 16    instruccion -> while_state newline
Rule 17    instruccion -> for_state newline
Rule 18    instruccion -> nativas newline
Rule 19    instruccion -> create_struct newline
Rule 20    instruccion -> declare_struct newline
Rule 21    instruccion -> assign_access newline
Rule 22    expression -> MENOS expression
Rule 23    expression -> NOT expression
Rule 24    expression -> expression MAS expression
Rule 25    expression -> expression MENOS expression
Rule 26    expression -> expression POR expression
Rule 27    expression -> expression DIVIDIDO expression
Rule 28    expression -> expression POTENCIA expression
Rule 29    expression -> expression MODULO expression
Rule 30    expression -> expression MAYQUE expression
Rule 31    expression -> expression MENQUE expression
Rule 32    expression -> expression MENIGUALQUE expression
Rule 33    expression -> expression MAYIGUALQUE expression
Rule 34    expression -> expression IGUALQUE expression
Rule 35    expression -> expression NIGUALQUE expression
Rule 36    expression -> expression OR expression
Rule 37    expression -> expression AND expression
Rule 38    expression -> final_expression
Rule 39    final_expression -> PARIZQ expression PARDER
Rule 40    final_expression -> CORCHETEIZQ exp_list CORCHETEDER
Rule 41    final_expression -> DECIMAL
Rule 42    final_expression -> ENTERO
Rule 43    final_expression -> CADENA
Rule 44    final_expression -> CARACTER
Rule 45    final_expression -> ID
Rule 46    final_expression -> ID index_list
Rule 47    final_expression -> TRUE
Rule 48    final_expression -> FALSE
Rule 49    final_expression -> call_function
Rule 50    final_expression -> access_struct
Rule 51    final_expression -> nativas
Rule 52    nativas -> LOG PARIZQ ENTERO COMA expression PARDER
Rule 53    nativas -> LOG10 PARIZQ expression PARDER
Rule 54    nativas -> COS PARIZQ expression PARDER
Rule 55    nativas -> SIN PARIZQ expression PARDER
Rule 56    nativas -> TAN PARIZQ expression PARDER
Rule 57    nativas -> SQRT PARIZQ expression PARDER
Rule 58    nativas -> UPPERCASE PARIZQ expression PARDER
Rule 59    nativas -> LOWERCASE PARIZQ expression PARDER
Rule 60    nativas -> TOSTRING PARIZQ expression PARDER
Rule 61    nativas -> TOFLOAT PARIZQ expression PARDER
Rule 62    nativas -> TRUNC PARIZQ INT COMA expression PARDER
Rule 63    nativas -> TRUNC PARIZQ expression PARDER
Rule 64    nativas -> TYPEOF PARIZQ expression PARDER
Rule 65    nativas -> PARSE PARIZQ tipo COMA expression PARDER
Rule 66    nativas -> LENGTH PARIZQ expression PARDER
Rule 67    nativas -> PUSH PARIZQ expression COMA expression PARDER
Rule 68    nativas -> POP PARIZQ expression PARDER
Rule 69    print_instr -> PRINT PARIZQ exp_list PARDER
Rule 70    println_instr -> PRINTLN PARIZQ exp_list PARDER
Rule 71    tipo -> INT
Rule 72    tipo -> FLOAT
Rule 73    tipo -> BOOL
Rule 74    tipo -> CHAR
Rule 75    tipo -> STRING
Rule 76    tipo -> ARRAY
Rule 77    tipo -> NOTHING
Rule 78    definicion_instr -> LOCAL ID
Rule 79    asignacion_instr -> ID IGUAL expression
Rule 80    asignacion_instr -> LOCAL ID IGUAL expression
Rule 81    definicion_asignacion_instr -> ID IGUAL expression DOSP tipo
Rule 82    definicion_asignacion_instr -> LOCAL ID IGUAL expression DOSP tipo
Rule 83    asignacion_arreglo_instr -> ID index_list IGUAL expression
Rule 84    call_function -> ID PARIZQ PARDER
Rule 85    call_function -> ID PARIZQ exp_list PARDER
Rule 86    exp_list -> exp_list COMA expression
Rule 87    exp_list -> expression
Rule 88    index_list -> index_list CORCHETEIZQ expression CORCHETEDER
Rule 89    index_list -> CORCHETEIZQ expression CORCHETEDER
Rule 90    statement -> instrucciones
Rule 91    declare_function -> FUNCTION ID PARIZQ dec_params PARDER DOSP newline statement END
Rule 92    declare_function -> FUNCTION ID PARIZQ PARDER DOSP newline statement END
Rule 93    dec_params -> dec_params COMA ID DOSP DOSP tipo
Rule 94    dec_params -> dec_params COMA ID DOSP DOSP ID
Rule 95    dec_params -> dec_params COMA ID
Rule 96    dec_params -> ID DOSP DOSP tipo
Rule 97    dec_params -> ID DOSP DOSP ID
Rule 98    dec_params -> ID
Rule 99    if_state -> IF expression DOSP newline statement END
Rule 100   if_state -> IF expression DOSP newline statement ELSE DOSP newline statement END
Rule 101   if_state -> IF expression DOSP newline statement else_if_list END
Rule 102   else_if_list -> ELSEIF expression DOSP newline statement
Rule 103   else_if_list -> ELSEIF expression DOSP newline statement ELSE DOSP newline statement
Rule 104   else_if_list -> ELSEIF expression DOSP newline statement else_if_list
Rule 105   while_state -> WHILE expression DOSP newline statement END
Rule 106   for_state -> FOR ID IN expression DOSP expression DOSP newline statement END
Rule 107   for_state -> FOR ID IN expression DOSP newline statement END
Rule 108   break_state -> BREAK
Rule 109   continue_state -> CONTINUE
Rule 110   return_state -> RETURN
Rule 111   return_state -> RETURN expression
Rule 112   create_struct -> STRUCT ID DOSP newline attList END
Rule 113   attList -> attList ID DOSP tipo PTCOMA newline
Rule 114   attList -> ID DOSP tipo PTCOMA newline
Rule 115   declare_struct -> ID DOSP DOSP ID
Rule 116   assign_access -> ID PUNTO ID IGUAL expression
Rule 117   access_struct -> ID PUNTO ID

Terminals, with rules where they appear

AND                  : 37
ARRAY                : 76
BOOL                 : 73
BREAK                : 108
CADENA               : 43
CARACTER             : 44
CHAR                 : 74
COMA                 : 52 62 65 67 86 93 94 95
CONTINUE             : 109
CORCHETEDER          : 40 88 89
CORCHETEIZQ          : 40 88 89
COS                  : 54
DECIMAL              : 41
DIVIDIDO             : 27
DOSP                 : 81 82 91 92 93 93 94 94 96 96 97 97 99 100 100 101 102 103 103 104 105 106 106 107 112 113 114 115 115
ELSE                 : 100 103
ELSEIF               : 102 103 104
END                  : 91 92 99 100 101 105 106 107 112
ENTERO               : 42 52
FALSE                : 48
FLOAT                : 72
FOR                  : 106 107
FUNCTION             : 91 92
ID                   : 45 46 78 79 80 81 82 83 84 85 91 92 93 94 94 95 96 97 97 98 106 107 112 113 114 115 115 116 116 117 117
IF                   : 99 100 101
IGUAL                : 79 80 81 82 83 116
IGUALQUE             : 34
IN                   : 106 107
INT                  : 62 71
LENGTH               : 66
LOCAL                : 78 80 82
LOG                  : 52
LOG10                : 53
LOWERCASE            : 59
MAS                  : 24
MAYIGUALQUE          : 33
MAYQUE               : 30
MENIGUALQUE          : 32
MENOS                : 22 25
MENQUE               : 31
MODULO               : 29
NIGUALQUE            : 35
NOT                  : 23
NOTHING              : 77
OR                   : 36
PARDER               : 39 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 84 85 91 92
PARIZQ               : 39 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 84 85 91 92
PARSE                : 65
POP                  : 68
POR                  : 26
POTENCIA             : 28
PRINT                : 69
PRINTLN              : 70
PTCOMA               : 113 114
PUNTO                : 116 117
PUSH                 : 67
RETURN               : 110 111
SIN                  : 55
SQRT                 : 57
STRING               : 75
STRUCT               : 112
TAN                  : 56
TOFLOAT              : 61
TOSTRING             : 60
TRUE                 : 47
TRUNC                : 62 63
TYPEOF               : 64
UPPERCASE            : 58
WHILE                : 105
error                : 
newline              : 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 91 92 99 100 100 101 102 103 103 104 105 106 107 112 113 114

Nonterminals, with rules where they appear

access_struct        : 50
asignacion_arreglo_instr : 8
asignacion_instr     : 7
assign_access        : 21
attList              : 112 113
break_state          : 13
call_function        : 10 49
continue_state       : 14
create_struct        : 19
dec_params           : 91 93 94 95
declare_function     : 11
declare_struct       : 20
definicion_asignacion_instr : 9
definicion_instr     : 6
else_if_list         : 101 104
exp_list             : 40 69 70 85 86
expression           : 22 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 39 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 67 68 79 80 81 82 83 86 87 88 89 99 100 101 102 103 104 105 106 106 107 111 116
final_expression     : 38
for_state            : 17
if_state             : 15
index_list           : 46 83 88
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 90
nativas              : 18 51
print_instr          : 4
println_instr        : 5
return_state         : 12
statement            : 91 92 99 100 100 101 102 103 103 104 105 106 107
tipo                 : 65 81 82 93 96 113 114
while_state          : 16

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . print_instr newline
    (5) instruccion -> . println_instr newline
    (6) instruccion -> . definicion_instr newline
    (7) instruccion -> . asignacion_instr newline
    (8) instruccion -> . asignacion_arreglo_instr newline
    (9) instruccion -> . definicion_asignacion_instr newline
    (10) instruccion -> . call_function newline
    (11) instruccion -> . declare_function newline
    (12) instruccion -> . return_state newline
    (13) instruccion -> . break_state newline
    (14) instruccion -> . continue_state newline
    (15) instruccion -> . if_state newline
    (16) instruccion -> . while_state newline
    (17) instruccion -> . for_state newline
    (18) instruccion -> . nativas newline
    (19) instruccion -> . create_struct newline
    (20) instruccion -> . declare_struct newline
    (21) instruccion -> . assign_access newline
    (69) print_instr -> . PRINT PARIZQ exp_list PARDER
    (70) println_instr -> . PRINTLN PARIZQ exp_list PARDER
    (78) definicion_instr -> . LOCAL ID
    (79) asignacion_instr -> . ID IGUAL expression
    (80) asignacion_instr -> . LOCAL ID IGUAL expression
    (83) asignacion_arreglo_instr -> . ID index_list IGUAL expression
    (81) definicion_asignacion_instr -> . ID IGUAL expression DOSP tipo
    (82) definicion_asignacion_instr -> . LOCAL ID IGUAL expression DOSP tipo
    (84) call_function -> . ID PARIZQ PARDER
    (85) call_function -> . ID PARIZQ exp_list PARDER
    (91) declare_function -> . FUNCTION ID PARIZQ dec_params PARDER DOSP newline statement END
    (92) declare_function -> . FUNCTION ID PARIZQ PARDER DOSP newline statement END
    (110) return_state -> . RETURN
    (111) return_state -> . RETURN expression
    (108) break_state -> . BREAK
    (109) continue_state -> . CONTINUE
    (99) if_state -> . IF expression DOSP newline statement END
    (100) if_state -> . IF expression DOSP newline statement ELSE DOSP newline statement END
    (101) if_state -> . IF expression DOSP newline statement else_if_list END
    (105) while_state -> . WHILE expression DOSP newline statement END
    (106) for_state -> . FOR ID IN expression DOSP expression DOSP newline statement END
    (107) for_state -> . FOR ID IN expression DOSP newline statement END
    (52) nativas -> . LOG PARIZQ ENTERO COMA expression PARDER
    (53) nativas -> . LOG10 PARIZQ expression PARDER
    (54) nativas -> . COS PARIZQ expression PARDER
    (55) nativas -> . SIN PARIZQ expression PARDER
    (56) nativas -> . TAN PARIZQ expression PARDER
    (57) nativas -> . SQRT PARIZQ expression PARDER
    (58) nativas -> . UPPERCASE PARIZQ expression PARDER
    (59) nativas -> . LOWERCASE PARIZQ expression PARDER
    (60) nativas -> . TOSTRING PARIZQ expression PARDER
    (61) nativas -> . TOFLOAT PARIZQ expression PARDER
    (62) nativas -> . TRUNC PARIZQ INT COMA expression PARDER
    (63) nativas -> . TRUNC PARIZQ expression PARDER
    (64) nativas -> . TYPEOF PARIZQ expression PARDER
    (65) nativas -> . PARSE PARIZQ tipo COMA expression PARDER
    (66) nativas -> . LENGTH PARIZQ expression PARDER
    (67) nativas -> . PUSH PARIZQ expression COMA expression PARDER
    (68) nativas -> . POP PARIZQ expression PARDER
    (112) create_struct -> . STRUCT ID DOSP newline attList END
    (115) declare_struct -> . ID DOSP DOSP ID
    (116) assign_access -> . ID PUNTO ID IGUAL expression

    PRINT           shift and go to state 22
    PRINTLN         shift and go to state 23
    LOCAL           shift and go to state 24
    ID              shift and go to state 25
    FUNCTION        shift and go to state 26
    RETURN          shift and go to state 27
    BREAK           shift and go to state 28
    CONTINUE        shift and go to state 29
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    LOG             shift and go to state 33
    LOG10           shift and go to state 34
    COS             shift and go to state 35
    SIN             shift and go to state 36
    TAN             shift and go to state 37
    SQRT            shift and go to state 38
    UPPERCASE       shift and go to state 39
    LOWERCASE       shift and go to state 40
    TOSTRING        shift and go to state 41
    TOFLOAT         shift and go to state 42
    TRUNC           shift and go to state 43
    TYPEOF          shift and go to state 44
    PARSE           shift and go to state 45
    LENGTH          shift and go to state 46
    PUSH            shift and go to state 47
    POP             shift and go to state 48
    STRUCT          shift and go to state 49

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    print_instr                    shift and go to state 4
    println_instr                  shift and go to state 5
    definicion_instr               shift and go to state 6
    asignacion_instr               shift and go to state 7
    asignacion_arreglo_instr       shift and go to state 8
    definicion_asignacion_instr    shift and go to state 9
    call_function                  shift and go to state 10
    declare_function               shift and go to state 11
    return_state                   shift and go to state 12
    break_state                    shift and go to state 13
    continue_state                 shift and go to state 14
    if_state                       shift and go to state 15
    while_state                    shift and go to state 16
    for_state                      shift and go to state 17
    nativas                        shift and go to state 18
    create_struct                  shift and go to state 19
    declare_struct                 shift and go to state 20
    assign_access                  shift and go to state 21

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . print_instr newline
    (5) instruccion -> . println_instr newline
    (6) instruccion -> . definicion_instr newline
    (7) instruccion -> . asignacion_instr newline
    (8) instruccion -> . asignacion_arreglo_instr newline
    (9) instruccion -> . definicion_asignacion_instr newline
    (10) instruccion -> . call_function newline
    (11) instruccion -> . declare_function newline
    (12) instruccion -> . return_state newline
    (13) instruccion -> . break_state newline
    (14) instruccion -> . continue_state newline
    (15) instruccion -> . if_state newline
    (16) instruccion -> . while_state newline
    (17) instruccion -> . for_state newline
    (18) instruccion -> . nativas newline
    (19) instruccion -> . create_struct newline
    (20) instruccion -> . declare_struct newline
    (21) instruccion -> . assign_access newline
    (69) print_instr -> . PRINT PARIZQ exp_list PARDER
    (70) println_instr -> . PRINTLN PARIZQ exp_list PARDER
    (78) definicion_instr -> . LOCAL ID
    (79) asignacion_instr -> . ID IGUAL expression
    (80) asignacion_instr -> . LOCAL ID IGUAL expression
    (83) asignacion_arreglo_instr -> . ID index_list IGUAL expression
    (81) definicion_asignacion_instr -> . ID IGUAL expression DOSP tipo
    (82) definicion_asignacion_instr -> . LOCAL ID IGUAL expression DOSP tipo
    (84) call_function -> . ID PARIZQ PARDER
    (85) call_function -> . ID PARIZQ exp_list PARDER
    (91) declare_function -> . FUNCTION ID PARIZQ dec_params PARDER DOSP newline statement END
    (92) declare_function -> . FUNCTION ID PARIZQ PARDER DOSP newline statement END
    (110) return_state -> . RETURN
    (111) return_state -> . RETURN expression
    (108) break_state -> . BREAK
    (109) continue_state -> . CONTINUE
    (99) if_state -> . IF expression DOSP newline statement END
    (100) if_state -> . IF expression DOSP newline statement ELSE DOSP newline statement END
    (101) if_state -> . IF expression DOSP newline statement else_if_list END
    (105) while_state -> . WHILE expression DOSP newline statement END
    (106) for_state -> . FOR ID IN expression DOSP expression DOSP newline statement END
    (107) for_state -> . FOR ID IN expression DOSP newline statement END
    (52) nativas -> . LOG PARIZQ ENTERO COMA expression PARDER
    (53) nativas -> . LOG10 PARIZQ expression PARDER
    (54) nativas -> . COS PARIZQ expression PARDER
    (55) nativas -> . SIN PARIZQ expression PARDER
    (56) nativas -> . TAN PARIZQ expression PARDER
    (57) nativas -> . SQRT PARIZQ expression PARDER
    (58) nativas -> . UPPERCASE PARIZQ expression PARDER
    (59) nativas -> . LOWERCASE PARIZQ expression PARDER
    (60) nativas -> . TOSTRING PARIZQ expression PARDER
    (61) nativas -> . TOFLOAT PARIZQ expression PARDER
    (62) nativas -> . TRUNC PARIZQ INT COMA expression PARDER
    (63) nativas -> . TRUNC PARIZQ expression PARDER
    (64) nativas -> . TYPEOF PARIZQ expression PARDER
    (65) nativas -> . PARSE PARIZQ tipo COMA expression PARDER
    (66) nativas -> . LENGTH PARIZQ expression PARDER
    (67) nativas -> . PUSH PARIZQ expression COMA expression PARDER
    (68) nativas -> . POP PARIZQ expression PARDER
    (112) create_struct -> . STRUCT ID DOSP newline attList END
    (115) declare_struct -> . ID DOSP DOSP ID
    (116) assign_access -> . ID PUNTO ID IGUAL expression

    $end            reduce using rule 1 (init -> instrucciones .)
    PRINT           shift and go to state 22
    PRINTLN         shift and go to state 23
    LOCAL           shift and go to state 24
    ID              shift and go to state 25
    FUNCTION        shift and go to state 26
    RETURN          shift and go to state 27
    BREAK           shift and go to state 28
    CONTINUE        shift and go to state 29
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    LOG             shift and go to state 33
    LOG10           shift and go to state 34
    COS             shift and go to state 35
    SIN             shift and go to state 36
    TAN             shift and go to state 37
    SQRT            shift and go to state 38
    UPPERCASE       shift and go to state 39
    LOWERCASE       shift and go to state 40
    TOSTRING        shift and go to state 41
    TOFLOAT         shift and go to state 42
    TRUNC           shift and go to state 43
    TYPEOF          shift and go to state 44
    PARSE           shift and go to state 45
    LENGTH          shift and go to state 46
    PUSH            shift and go to state 47
    POP             shift and go to state 48
    STRUCT          shift and go to state 49

    instruccion                    shift and go to state 50
    print_instr                    shift and go to state 4
    println_instr                  shift and go to state 5
    definicion_instr               shift and go to state 6
    asignacion_instr               shift and go to state 7
    asignacion_arreglo_instr       shift and go to state 8
    definicion_asignacion_instr    shift and go to state 9
    call_function                  shift and go to state 10
    declare_function               shift and go to state 11
    return_state                   shift and go to state 12
    break_state                    shift and go to state 13
    continue_state                 shift and go to state 14
    if_state                       shift and go to state 15
    while_state                    shift and go to state 16
    for_state                      shift and go to state 17
    nativas                        shift and go to state 18
    create_struct                  shift and go to state 19
    declare_struct                 shift and go to state 20
    assign_access                  shift and go to state 21

state 3

    (3) instrucciones -> instruccion .

    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    PRINTLN         reduce using rule 3 (instrucciones -> instruccion .)
    LOCAL           reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 3 (instrucciones -> instruccion .)
    RETURN          reduce using rule 3 (instrucciones -> instruccion .)
    BREAK           reduce using rule 3 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    FOR             reduce using rule 3 (instrucciones -> instruccion .)
    LOG             reduce using rule 3 (instrucciones -> instruccion .)
    LOG10           reduce using rule 3 (instrucciones -> instruccion .)
    COS             reduce using rule 3 (instrucciones -> instruccion .)
    SIN             reduce using rule 3 (instrucciones -> instruccion .)
    TAN             reduce using rule 3 (instrucciones -> instruccion .)
    SQRT            reduce using rule 3 (instrucciones -> instruccion .)
    UPPERCASE       reduce using rule 3 (instrucciones -> instruccion .)
    LOWERCASE       reduce using rule 3 (instrucciones -> instruccion .)
    TOSTRING        reduce using rule 3 (instrucciones -> instruccion .)
    TOFLOAT         reduce using rule 3 (instrucciones -> instruccion .)
    TRUNC           reduce using rule 3 (instrucciones -> instruccion .)
    TYPEOF          reduce using rule 3 (instrucciones -> instruccion .)
    PARSE           reduce using rule 3 (instrucciones -> instruccion .)
    LENGTH          reduce using rule 3 (instrucciones -> instruccion .)
    PUSH            reduce using rule 3 (instrucciones -> instruccion .)
    POP             reduce using rule 3 (instrucciones -> instruccion .)
    STRUCT          reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    END             reduce using rule 3 (instrucciones -> instruccion .)
    ELSE            reduce using rule 3 (instrucciones -> instruccion .)
    ELSEIF          reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> print_instr . newline

    newline         shift and go to state 51


state 5

    (5) instruccion -> println_instr . newline

    newline         shift and go to state 52


state 6

    (6) instruccion -> definicion_instr . newline

    newline         shift and go to state 53


state 7

    (7) instruccion -> asignacion_instr . newline

    newline         shift and go to state 54


state 8

    (8) instruccion -> asignacion_arreglo_instr . newline

    newline         shift and go to state 55


state 9

    (9) instruccion -> definicion_asignacion_instr . newline

    newline         shift and go to state 56


state 10

    (10) instruccion -> call_function . newline

    newline         shift and go to state 57


state 11

    (11) instruccion -> declare_function . newline

    newline         shift and go to state 58


state 12

    (12) instruccion -> return_state . newline

    newline         shift and go to state 59


state 13

    (13) instruccion -> break_state . newline

    newline         shift and go to state 60


state 14

    (14) instruccion -> continue_state . newline

    newline         shift and go to state 61


state 15

    (15) instruccion -> if_state . newline

    newline         shift and go to state 62


state 16

    (16) instruccion -> while_state . newline

    newline         shift and go to state 63


state 17

    (17) instruccion -> for_state . newline

    newline         shift and go to state 64


state 18

    (18) instruccion -> nativas . newline

    newline         shift and go to state 65


state 19

    (19) instruccion -> create_struct . newline

    newline         shift and go to state 66


state 20

    (20) instruccion -> declare_struct . newline

    newline         shift and go to state 67


state 21

    (21) instruccion -> assign_access . newline

    newline         shift and go to state 68


state 22

    (69) print_instr -> PRINT . PARIZQ exp_list PARDER

    PARIZQ          shift and go to state 69


state 23

    (70) println_instr -> PRINTLN . PARIZQ exp_list PARDER

    PARIZQ          shift and go to state 70


state 24

    (78) definicion_instr -> LOCAL . ID
    (80) asignacion_instr -> LOCAL . ID IGUAL expression
    (82) definicion_asignacion_instr -> LOCAL . ID IGUAL expression DOSP tipo

    ID              shift and go to state 71


state 25

    (79) asignacion_instr -> ID . IGUAL expression
    (83) asignacion_arreglo_instr -> ID . index_list IGUAL expression
    (81) definicion_asignacion_instr -> ID . IGUAL expression DOSP tipo
    (84) call_function -> ID . PARIZQ PARDER
    (85) call_function -> ID . PARIZQ exp_list PARDER
    (115) declare_struct -> ID . DOSP DOSP ID
    (116) assign_access -> ID . PUNTO ID IGUAL expression
    (88) index_list -> . index_list CORCHETEIZQ expression CORCHETEDER
    (89) index_list -> . CORCHETEIZQ expression CORCHETEDER

    IGUAL           shift and go to state 72
    PARIZQ          shift and go to state 75
    DOSP            shift and go to state 74
    PUNTO           shift and go to state 76
    CORCHETEIZQ     shift and go to state 77

    index_list                     shift and go to state 73

state 26

    (91) declare_function -> FUNCTION . ID PARIZQ dec_params PARDER DOSP newline statement END
    (92) declare_function -> FUNCTION . ID PARIZQ PARDER DOSP newline statement END

    ID              shift and go to state 78


state 27

    (110) return_state -> RETURN .
    (111) return_state -> RETURN . expression
    (22) expression -> . MENOS expression
    (23) expression -> . NOT expression
    (24) expression -> . expression MAS expression
    (25) expression -> . expression MENOS expression
    (26) expression -> . expression POR expression
    (27) expression -> . expression DIVIDIDO expression
    (28) expression -> . expression POTENCIA expression
    (29) expression -> . expression MODULO expression
    (30) expression -> . expression MAYQUE expression
    (31) expression -> . expression MENQUE expression
    (32) expression -> . expression MENIGUALQUE expression
    (33) expression -> . expression MAYIGUALQUE expression
    (34) expression -> . expression IGUALQUE expression
    (35) expression -> . expression NIGUALQUE expression
    (36) expression -> . expression OR expression
    (37) expression -> . expression AND expression
    (38) expression -> . final_expression
    (39) final_expression -> . PARIZQ expression PARDER
    (40) final_expression -> . CORCHETEIZQ exp_list CORCHETEDER
    (41) final_expression -> . DECIMAL
    (42) final_expression -> . ENTERO
    (43) final_expression -> . CADENA
    (44) final_expression -> . CARACTER
    (45) final_expression -> . ID
    (46) final_expression -> . ID index_list
    (47) final_expression -> . TRUE
    (48) final_expression -> . FALSE
    (49) final_expression -> . call_function
    (50) final_expression -> . access_struct
    (51) final_expression -> . nativas
    (84) call_function -> . ID PARIZQ PARDER
    (85) call_function -> . ID PARIZQ exp_list PARDER
    (117) access_struct -> . ID PUNTO ID
    (52) nativas -> . LOG PARIZQ ENTERO COMA expression PARDER
    (53) nativas -> . LOG10 PARIZQ expression PARDER
    (54) nativas -> . COS PARIZQ expression PARDER
    (55) nativas -> . SIN PARIZQ expression PARDER
    (56) nativas -> . TAN PARIZQ expression PARDER
    (57) nativas -> . SQRT PARIZQ expression PARDER
    (58) nativas -> . UPPERCASE PARIZQ expression PARDER
    (59) nativas -> . LOWERCASE PARIZQ expression PARDER
    (60) nativas -> . TOSTRING PARIZQ expression PARDER
    (61) nativas -> . TOFLOAT PARIZQ expression PARDER
    (62) nativas -> . TRUNC PARIZQ INT COMA expression PARDER
    (63) nativas -> . TRUNC PARIZQ expression PARDER
    (64) nativas -> . TYPEOF PARIZQ expression PARDER
    (65) nativas -> . PARSE PARIZQ tipo COMA expression PARDER
    (66) nativas -> . LENGTH PARIZQ expression PARDER
    (67) nativas -> . PUSH PARIZQ expression COMA expression PARDER
    (68) nativas -> . POP PARIZQ expression PARDER

    newline         reduce using rule 110 (return_state -> RETURN .)
    MENOS           shift and go to state 80
    NOT             shift and go to state 81
    PARIZQ          shift and go to state 83
    CORCHETEIZQ     shift and go to state 84
    DECIMAL         shift and go to state 85
    ENTERO          shift and go to state 86
    CADENA          shift and go to state 87
    CARACTER        shift and go to state 88
    ID              shift and go to state 89
    TRUE            shift and go to state 90
    FALSE           shift and go to state 91
    LOG             shift and go to state 33
    LOG10           shift and go to state 34
    COS             shift and go to state 35
    SIN             shift and go to state 36
    TAN             shift and go to state 37
    SQRT            shift and go to state 38
    UPPERCASE       shift and go to state 39
    LOWERCASE       shift and go to state 40
    TOSTRING        shift and go to state 41
    TOFLOAT         shift and go to state 42
    TRUNC           shift and go to state 43
    TYPEOF          shift and go to state 44
    PARSE           shift and go to state 45
    LENGTH          shift and go to state 46
    PUSH            shift and go to state 47
    POP             shift and go to state 48

    expression                     shift and go to state 79
    final_expression               shift and go to state 82
    call_function                  shift and go to state 92
    access_struct                  shift and go to state 93
    nativas                        shift and go to state 94

state 28

    (108) break_state -> BREAK .

    newline         reduce using rule 108 (break_state -> BREAK .)


state 29

    (109) continue_state -> CONTINUE .

    newline         reduce using rule 109 (continue_state -> CONTINUE .)


state 30

    (99) if_state -> IF . expression DOSP newline statement END
    (100) if_state -> IF . expression DOSP newline statement ELSE DOSP newline statement END
    (101) if_state -> IF . expression DOSP newline statement else_if_list END
    (22) expression -> . MENOS expression
    (23) expression -> . NOT expression
    (24) expression -> . expression MAS expression
    (25) expression -> . expression MENOS expression
    (26) expression -> . expression POR expression
    (27) expression -> . expression DIVIDIDO expression
    (28) expression -> . expression POTENCIA expression
    (29) expression -> . expression MODULO expression
    (30) expression -> . expression MAYQUE expression
    (31) expression -> . expression MENQUE expression
    (32) expression -> . expression MENIGUALQUE expression
    (33) expression -> . expression MAYIGUALQUE expression
    (34) expression -> . expression IGUALQUE expression
    (35) expression -> . expression NIGUALQUE expression
    (36) expression -> . expression OR expression
    (37) expression -> . expression AND expression
    (38) expression -> . final_expression
    (39) final_expression -> . PARIZQ expression PARDER
    (40) final_expression -> . CORCHETEIZQ exp_list CORCHETEDER
    (41) final_expression -> . DECIMAL
    (42) final_expression -> . ENTERO
    (43) final_expression -> . CADENA
    (44) final_expression -> . CARACTER
    (45) final_expression -> . ID
    (46) final_expression -> . ID index_list
    (47) final_expression -> . TRUE
    (48) final_expression -> . FALSE
    (49) final_expression -> . call_function
    (50) final_expression -> . access_struct
    (51) final_expression -> . nativas
    (84) call_function -> . ID PARIZQ PARDER
    (85) call_function -> . ID PARIZQ exp_list PARDER
    (117) access_struct -> . ID PUNTO ID
    (52) nativas -> . LOG PARIZQ ENTERO COMA expression PARDER
    (53) nativas -> . LOG10 PARIZQ expression PARDER
    (54) nativas -> . COS PARIZQ expression PARDER
    (55) nativas -> . SIN PARIZQ expression PARDER
    (56) nativas -> . TAN PARIZQ expression PARDER
    (57) nativas -> . SQRT PARIZQ expression PARDER
    (58) nativas -> . UPPERCASE PARIZQ expression PARDER
    (59) nativas -> . LOWERCASE PARIZQ expression PARDER
    (60) nativas -> . TOSTRING PARIZQ expression PARDER
    (61) nativas -> . TOFLOAT PARIZQ expression PARDER
    (62) nativas -> . TRUNC PARIZQ INT COMA expression PARDER
    (63) nativas -> . TRUNC PARIZQ expression PARDER
    (64) nativas -> . TYPEOF PARIZQ expression PARDER
    (65) nativas -> . PARSE PARIZQ tipo COMA expression PARDER
    (66) nativas -> . LENGTH PARIZQ expression PARDER
    (67) nativas -> . PUSH PARIZQ expression COMA expression PARDER
    (68) nativas -> . POP PARIZQ expression PARDER
